<resources>
    <string name="app_name">Help the Bird</string>
    <string name="bird">Bird</string>
    <string name="enemy1">Enemy 1</string>
    <string name="enemy2">Enemy 2</string>
    <string name="enemy3">Enemy 3</string>
    <string name="tenPoints">10 Points</string>
    <string name="game_instruction">The innocent bird needs to reach 250 points in order to escape from enemies and reach its nest. Can you help the bird in this challenging task?</string>
    <string name="lost_game_message">Oh No!!\nYou lost the game</string>
    <string name="won_game_message">"Hurray!\nYou won the game"</string>
    <string name="quit_game_option">Quit game</string>
    <string name="cancel_game_option">Cancel</string>
    <string name="congrats">Congratulations, You helped the bird successfully</string>
</resources>